# swf-research-py

./: .gitignore  pyproject.toml  requirements.txt
notebooks/: Minimum Universal Basic Dividend.html  Minimum Universal Basic Dividend.ipynb  One-Time Wealth Tax.ipynb  Sizing A U.S. Social Wealth Fund.ipynb  datapackage_sandbox.ipynb
notebooks/.ipynb_checkpoints/: Minimum Universal Basic Dividend-checkpoint.ipynb  datapackage_sandbox-checkpoint.ipynb
swf/datapackage/: __init__.py  load.py
swf/datapackage/tests/: test_load.py
